welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: ';' expected but ']' found.
		droite();droite();avance()]
                                          ^